<resources>
    <string name="app_name">SpaceDoodge</string>
    <string name="start_game">Start Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="push_notifications">Push notifications</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="offline">Offline Play</string>
    <string name="solo">Solo Play</string>
    <string name="duel">Duel</string>
    <string name="log_out">Log out</string>
    <string name="select_a_level">Select a level</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="online_users">Online users</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="welcome">Welcome</string>
    <string name="nickname_will_help_users_id_you">Nickname will help other users identify you</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="save">Save</string>
    <string name="getting_highscores">Getting highscores...</string>
    <string name="game_over">Game Over!</string>
    <string name="final_score">Final score</string>
    <string name="currently_logged_in">Currently logged in</string>
    <string name="currently_offline">Currently offline</string>
    <string name="highscore_will_only_be_updated_if_logged_in">Highscore will only be updated if logged in</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="getting_user_list">Getting user list...</string>
    <string name="s_profile">\'s profile</string>
    <string name="top_5_ranks">Top 5 ranks</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="tap_to_restart">Tap to restart</string>
    <string name="highscores_only_updated_in_solo">Highscores do not update in offline play</string>
    <string name="bitter_defeat">Bitter defeat!</string>
    <string name="hurray_opponent_died">Hurray! opponent died</string>
    <string name="updating_highscores_please_wait">Updating highscores, please wait...</string>
    <string name="waiting_for_players">Waiting for players...</string>
    <string name="has_been_chosen">has been chosen</string>
    <string name="logging_in_please_wait">Logging in, please wait...</string>
    <string name="login_successfull">Login successful</string>
    <string name="login_unsuccessfull">Login unsuccessful, please try again</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="error_when_registering">Error when registering, please try again</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="registering_user">Registering user, please wait...</string>
    <string name="new_highscore">New highscore!</string>
    <string name="is_chosing_level">is chosing the level</string>
    <string name="changing_account">Changing account, please wait...</string>
    <string name="getting_highscores_for_level">Getting highscores for level:</string>
    <string name="total_wins">Total wins: </string>
    <string name="google_login_faield">Google login failed</string>
    <string name="has_invited_you_to_a_game">has invited you to a duel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="challenged">Challenged!</string>
    <string name="game_invite_has_been_rejected">Your game invite has been rejected</string>
    <string name="level">"Level "</string>
    <string name="rank">Rank</string>
    <string name="top">Top</string>
    <string name="tap_a_user_to_challenge">Tap on a user to challenge them!</string>
    <string name="waiting_for_user_response">Waiting for the user to respond...</string>
    <string name="highscores_do_not_update_in_duel">Highscores do not update in duel</string>
    <string name="duel_wins_updated">Total duel wins will be updated!</string>
    <string name="change_google_account">Change google account</string>
</resources>
