<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_game_over"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:padding="5dp"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_gameover_alien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/aliengreen_hurt"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tv_game_won_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_my_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_score"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>



        <TextView
            android:id="@+id/tv_highscore_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscore_will_only_be_updated_if_logged_in"
            android:textStyle="italic"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp">

            <Button
                android:id="@+id/b_gameOverRestart"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_button"
                android:text="@string/restart"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/b_gameOverExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_button"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:onClick="gameOverExitButtonClicked"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>