<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/aliengreen_walk1" />

        <EditText
            android:id="@+id/fieldEmail"
            style="@style/myEditText_style"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fieldPassword"
            style="@style/myEditText_style"
            android:autofillHints=""
            android:hint="@string/enter_password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/transparent_button"
            android:onClick="signinOrRegisterClicked"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/transparent_button"
            android:onClick="signinOrRegisterClicked"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.gms.common.SignInButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Google Account"
            android:textSize="17dp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:onClick="googleChangeAccountClicked"/>





    </LinearLayout>

</android.support.constraint.ConstraintLayout>